--- a/android-app/app/src/main/res/layout/activity_receipt.xml
+++ b/android-app/app/src/main/res/layout/activity_receipt.xml
@@ -6,7 +6,9 @@
     android:layout_height="match_parent">
 
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Receipt" />
+        android:id="@+id/text_receipt"
+        android:text="@string/receipt_title"
+        android:textSize="18sp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
 </LinearLayout>
